--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>canvas ball animation app</title>
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.2/reset.min.css" />
+  <link rel="stylesheet" href="/src/style.scss" />
 </head>
 
 <body>
-  <div id="app"></div>
+  <canvas id="canvas" />
   <script type="module" src="/src/main.ts"></script>
 </body>
 
